[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.243.0",
    "pulumi-cloudflare>=6.11.0",
    "pulumiverse-statuscake>=1.0.2",
    "setuptools>=75.0.0",
]

# pulumiverse-statuscake 1.0.2 (last upstream release, Oct 2023) imports pkg_resources,
# which setuptools removed in 81+. Point at a fork that swaps the call for
# importlib.metadata. Drop this source override once the upstream PR merges and ships.
[tool.uv.sources]
pulumiverse-statuscake = { git = "https://github.com/EdwardSalkeld/pulumi-statuscake.git", branch = "rumandpopcorn-fork", subdirectory = "sdk/python" }
